objects/Release__c.object
<CustomObject>
    <description>Releases management for Change Request Management App.</description>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Write here the keynotes related to this release.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Functional_Charge__c</fullName>
        <inlineHelpText>Man/Days</inlineHelpText>
        <label>Functional Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>Analyze</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promote_to_Production_Date__c</fullName>
        <label>Promote to Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promote_to_Staging_Date__c</fullName>
        <label>Promote to Staging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_number__c</fullName>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Release number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Technical_Charge__c</fullName>
        <inlineHelpText>Man/Days</inlineHelpText>
        <label>Technical Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Release_number__c</columns>
        <columns>Description__c</columns>
        <columns>Complexity__c</columns>
        <columns>Phase__c</columns>
        <columns>Promote_to_Staging_Date__c</columns>
        <columns>Promote_to_Production_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Releases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Current_Release</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Release_number__c</columns>
        <columns>Description__c</columns>
        <columns>Complexity__c</columns>
        <columns>Phase__c</columns>
        <columns>Promote_to_Staging_Date__c</columns>
        <columns>Promote_to_Production_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Promote_to_Staging_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Promote_to_Staging_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Current Release (This Month)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Releases</fullName>
        <columns>NAME</columns>
        <columns>Release_number__c</columns>
        <columns>Description__c</columns>
        <columns>Complexity__c</columns>
        <columns>Phase__c</columns>
        <columns>Promote_to_Staging_Date__c</columns>
        <columns>Promote_to_Production_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Releases</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>